# elmo_drive

./: .gitignore  CMakeLists.txt  main.cpp
.in/: dir.h.in  io_map.py.in
config/: ethercat.json
config/control/: pd.json
config/io/: 0x1a07.json
config/joint/: common.json  limit.json  polarity.json  zero_position.json
data/: DC_time.csv  ground_force.csv  with.csv
include/: Leg.h  dir.h  io.h  joint.h  motor.h  queue.h  soem.h
include/pegasus2/: pegasus2.h
include/pegasus2/model/: pegasus2.kindsl
script/: ground_force.py  io_map.py  plot.py  plot_test.py  plot_time.py
src/: elmo.cpp  io.cpp  joint.cpp  motor.cpp
